adjust image tag path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Fokir</title>
 </head>
 
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="about-img-wrapper">
                 <div class="about-img">
-                    <img src="../images/about.jpg" alt="personal-img">
+                    <img src="./images/about.jpg" alt="personal-img">
                 </div>
 
             </div>
@@ -95,11 +95,11 @@
                 <div class="buttons">
                     <a href="#">
                         Download CV
-                        <img src="../images/icons/download (1).png" alt="Download-symbol">
+                        <img src="./images/icons/download (1).png" alt="Download-symbol">
                     </a>
                     <a href="#">
                         Hire Me
-                        <img src="../images/icons/telegram.png" alt="telegram-symbol">
+                        <img src="./images/icons/telegram.png" alt="telegram-symbol">
                     </a>
 
                 </div>
@@ -117,7 +117,7 @@
 
             <div class="services-item">
                 <div class="item-wrapper">
-                    <img src="../images/icons/design.png" alt="calculation-icon">
+                    <img src="./images/icons/design.png" alt="calculation-icon">
                     <h3>UI/UX DESIGN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione adipisci mollitia quis
                         necstatibus.
@@ -128,7 +128,7 @@
             </div>
             <div class="services-item">
                 <div class="item-wrapper">
-                    <img src="../images/icons/coding.png" alt="html-icon">
+                    <img src="./images/icons/coding.png" alt="html-icon">
                     <h3>APP DEVELOPMENT</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione adipisci mollitia quis
                         necstatibus.
@@ -138,7 +138,7 @@
             </div>
             <div class="services-item">
                 <div class="item-wrapper">
-                    <img src="../images/icons/dashboard (1).png" alt="dashboard-icon">
+                    <img src="./images/icons/dashboard (1).png" alt="dashboard-icon">
                     <h3>PRODUCT DESIGN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione adipisci mollitia quis
                         necstatibus.
@@ -149,7 +149,7 @@
             </div>
             <div class="services-item">
                 <div class="item-wrapper">
-                    <img src="../images/icons/setting.png" alt="settings-icon">
+                    <img src="./images/icons/setting.png" alt="settings-icon">
                     <h3>UI/UX DESIGN</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione adipisci mollitia quis
                         necstatibus.
@@ -179,42 +179,42 @@
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/1.jpg" alt="watch">
+                        <img src="./images/portfolio/1.jpg" alt="watch">
                 </div>
                 </a>
             </div>
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/2.jpg" alt="hand-watch">
+                        <img src="./images/portfolio/2.jpg" alt="hand-watch">
                     </a>
                 </div>
             </div>
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/3.jpg" alt="">
+                        <img src="./images/portfolio/3.jpg" alt="">
                     </a>
                 </div>
             </div>
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/4.jpg" alt="shoes">
+                        <img src="./images/portfolio/4.jpg" alt="shoes">
                     </a>
                 </div>
             </div>
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/5.jpg" alt="">
+                        <img src="./images/portfolio/5.jpg" alt="">
                     </a>
                 </div>
             </div>
             <div class="item-wrapper">
                 <div class="prtfolio-item">
                     <a href="#">
-                        <img src="../images/portfolio/6.jpg" alt="">
+                        <img src="./images/portfolio/6.jpg" alt="">
                     </a>
                 </div>
             </div>
@@ -230,22 +230,22 @@
         <div class="container">
 
             <div class="statistics-item">
-                <img src="../images/icons/user.png" alt="user icon">
+                <img src="./images/icons/user.png" alt="user icon">
                 <h3>86</h3>
                 <p>Team members</p>
             </div>
             <div class="statistics-item">
-                <img src="../images/icons/folder.png" alt="folder icon">
+                <img src="./images/icons/folder.png" alt="folder icon">
                 <h3>148</h3>
                 <p>Complete Projects</p>
             </div>
             <div class="statistics-item">
-                <img src="../images/icons/download.png" alt="cloud download">
+                <img src="./images/icons/download.png" alt="cloud download">
                 <h3>774</h3>
                 <p>Files Downloaded</p>
             </div>
             <div class="statistics-item">
-                <img src="../images/icons/coffee-cup.png" alt="coffe icon">
+                <img src="./images/icons/coffee-cup.png" alt="coffe icon">
                 <h3>504</h3>
                 <p>Lines Of Code</p>
             </div>
@@ -260,7 +260,7 @@
 
             <div class="feedback-item">
                 <div class="feedback-img">
-                    <img src="../images/feedback.jpg" alt="feedback-person-img">
+                    <img src="./images/feedback.jpg" alt="feedback-person-img">
                 </div>
                 <div class="desc">
                     <h3>Alex ander</h3>
@@ -276,11 +276,11 @@
                     </p>
                     <div class="rate">
                         <ul>
-                            <li><img src="../images/icons/star.png" alt="star-icon"></li>
-                            <li><img src="../images/icons/star.png" alt="star-icon"></li>
-                            <li><img src="../images/icons/star.png" alt="star-icon"></li>
-                            <li><img src="../images/icons/star.png" alt="star-icon"></li>
-                            <li><img src="../images/icons/star (1).png" alt="star-icon"></li>
+                            <li><img src="./images/icons/star.png" alt="star-icon"></li>
+                            <li><img src="./images/icons/star.png" alt="star-icon"></li>
+                            <li><img src="./images/icons/star.png" alt="star-icon"></li>
+                            <li><img src="./images/icons/star.png" alt="star-icon"></li>
+                            <li><img src="./images/icons/star (1).png" alt="star-icon"></li>
                         </ul>
                     </div>
 
@@ -311,7 +311,7 @@
                 <div class="blog-item">
                     <div class="main-img">
                         <a href="#">
-                            <img src="../images/blog/12.jpg" alt="girl">
+                            <img src="./images/blog/12.jpg" alt="girl">
                         </a>
 
                     </div>
@@ -323,7 +323,7 @@
                             eius incidunt repellat molestiae.</p>
                         <div class="read-more">
                             <a href="#" class="read-more-icon">READ MORE
-                                <img src="../images/icons/right-arrow.png" alt="right-arrow-icon">
+                                <img src="./images/icons/right-arrow.png" alt="right-arrow-icon">
                             </a>
                         </div>
 
@@ -348,7 +348,7 @@
 
                         <div class="read-more">
                             <a href="#" class="read-more-icon">READ MORE
-                                <img src="../images/icons/right-arrow.png" alt="right-arrow-icon">
+                                <img src="./images/icons/right-arrow.png" alt="right-arrow-icon">
                             </a>
                         </div>
 
@@ -363,7 +363,7 @@
                 <div class="blog-item">
                     <div class="main-img">
                         <a href="#">
-                            <img src="../images/blog/32.jpg" alt="guy">
+                            <img src="./images/blog/32.jpg" alt="guy">
                         </a>
                     </div>
 
@@ -375,7 +375,7 @@
                             eius incidunt repellat molestiae.</p>
                         <div class="read-more">
                             <a href="#" class="read-more-icon">READ MORE
-                                <img src="../images/icons/right-arrow.png" alt="right-arrow-icon">
+                                <img src="./images/icons/right-arrow.png" alt="right-arrow-icon">
                             </a>
                         </div>
 
@@ -433,22 +433,22 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="../images/icons/facebook.png" alt="facebook-icon">
+                            <img src="./images/icons/facebook.png" alt="facebook-icon">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../images/icons/twitter.png" alt="twitter-icon">
+                            <img src="./images/icons/twitter.png" alt="twitter-icon">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../images/icons/google.png" alt="google-icon">
+                            <img src="./images/icons/google.png" alt="google-icon">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="../images/icons/github (2).png" alt="github-icon">
+                            <img src="./images/icons/github (2).png" alt="github-icon">
                         </a>
                     </li>
                 </ul>
